--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,34 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Manuale', serif;
-    font-family: "Times New Roman", Times, serif;  
-}
-.navbar_container {
-    background-image: url('./images/watercolour.jpg');
+    font-family: "Times New Roman", Times, serif; 
+    margin-left: auto;
+    margin-right: auto;
+  }
+.container1 {
     height: 60px;
-    width: 100%;
+    width: auto;
 }
+
 a {
     color: white;
 }
 
-h1, a {
+h1 {
     display: inline-block;
 }
-.navbar_container a:hover {
+.container1 a:hover {
     background-color: white;
     color: #005576;
 
+} 
+.container1 {
+    display: flex;
 }
 .active {
     background-color: #005576;
