--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 20px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    color: black;
 }
 
 body {
@@ -10,39 +14,82 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
-.container1 {
-    height: 60px;
-    width: auto;
+.container1, .footer{
+    background-image: url(../images/watercolor.jpg);
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center center;
 }
 
-a {
-    color: white;
+.navbar {
+    text-align: justify;
+    min-width: 500px;
 }
+.navbar:after{
+    content: '';
+    display: inline-block;
+    width: 100%;
 
-h1 {
+}
+.navbar, li{
     display: inline-block;
 }
-.container1 a:hover {
-    background-color: white;
-    color: #005576;
 
+li, a {
+    text-align: justify;
+    display: inline-block;
+    padding-right: 600px;
+}
+
+.container1 {
+    height: 70px;
+    width: auto;
+}
+.footer {
+    height: 70px;
+    width: auto;
+}
+img {
+    size: 50%;
+    height: 65px;
+    width: auto;
+}
+a {
+    color: transparent;
+    margin-top: 65px;
+}
+
+h2 {
+    display: inline-block;
+    font-size: 300px;
+}
+.container1, a{
+    background-color:transparent;
+    color: #0e8f91;
 } 
 .container1 {
-    display: flex;
+    display: flexbox;
 }
-.active {
-    background-color: #005576;
+.active, .active:hover{
+    background-color: white;
+    color: black;
+    border-radius: 2px;
   }
 
+a .active, .menu {
+    list-style: none;
+    padding-right: 10px;
+    padding-top: 50px;
+    float: right;
+    size: 200px;
+    position: relative;
+}
 h1 {
 
-    height: 60px;
-    margin-left: 150px;
-    background-color: white;
     color: #005576;
-    text-align: center;
-    font-size: 20px;
-    vertical-align: text-bottom;
+    text-align: left;
+    font-size: 50px
+    font-weight: 5px;
 }
 
 a {
